--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "New Tab Minimalism",
   "version": "1.0",
+  "manifest_version": 2,
   "description": "Overrides the new tab page to display only a clock and the current date.",
   "chrome_url_overrides" : {
     "newtab": "newtab.html"
